Bug fix for not showing last day in chart of part history

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -130,6 +130,10 @@ span.hiddenSpan {
   display: none;
 }
 
+.noCursor {
+  cursor: default !important;
+}
+
 .darkBlueTextColor {
   color: $DarkBlue !important;
 }
